fixed z-index of imgwrapper for mobile menu section

--- a/style.css
+++ b/style.css
@@ -238,8 +238,8 @@ abbr,acronym { border:0;
     position: relative;
     justify-content: center;
     align-items: center;
+    z-index: -1;
 }
- 
 
   .menu-wrapper img{
     height: 19em;
